crates/code-graph-tools/tests/snapshots/snapshot_responses__response_analyze_codebase_python_models.snap
---
source: crates/code-graph-tools/tests/snapshot_responses.rs
assertion_line: 1715
expression: parsed
---
{
  "edges": 1,
  "files": 1,
  "root_path": "[testdata]",
  "symbols": 5
}
