crates/code-graph-tools/tests/snapshots/snapshot_responses__response_analyze_codebase_testdata_cpp.snap
---
source: crates/code-graph-tools/tests/snapshot_responses.rs
expression: parsed
---
{
  "edges": 21,
  "files": 8,
  "root_path": "[testdata]",
  "symbols": 18
}
