crates/code-graph-tools/tests/snapshots/snapshot_responses__response_analyze_codebase_testdata_mixed.snap
---
source: crates/code-graph-tools/tests/snapshot_responses.rs
expression: parsed
---
{
  "edges": 0,
  "files": 4,
  "root_path": "[testdata]",
  "symbols": 4
}
