crates/code-graph-tools/tests/snapshots/snapshot_responses__response_count_only_search_symbols.snap
---
source: crates/code-graph-tools/tests/snapshot_responses.rs
expression: parsed
---
{
  "limit": 0,
  "next_offset": null,
  "offset": 0,
  "results": [],
  "total": 1000,
  "truncated": false
}
