crates/code-graph-tools/tests/snapshots/snapshot_responses__response_detect_communities_member_capped.snap
---
source: crates/code-graph-tools/tests/snapshot_responses.rs
expression: parsed
---
{
  "degenerate": null,
  "edge_count": 9,
  "granularity": "file",
  "iterations": 2,
  "limit": 100,
  "next_offset": null,
  "node_count": 8,
  "offset": 0,
  "results": [
    {
      "label": "[testdata]",
      "members": [
        "[testdata]/engine.cpp",
        "[testdata]/engine.h"
      ],
      "original_len": 5,
      "size": 5,
      "truncated": true
    },
    {
      "label": "[testdata]",
      "members": [
        "[testdata]/circular_a.h",
        "[testdata]/circular_b.h"
      ],
      "size": 2,
      "truncated": false
    },
    {
      "label": "[testdata]/orphan.cpp",
      "members": [
        "[testdata]/orphan.cpp"
      ],
      "size": 1,
      "truncated": false
    }
  ],
  "termination": "converged",
  "total": 3,
  "truncated": false
}
