crates/code-graph-tools/tests/snapshots/snapshot_responses__response_generate_diagram_class_edges.snap
---
source: crates/code-graph-tools/tests/snapshot_responses.rs
expression: normalized
---
[
  {
    "from": "DebugEngine",
    "label": "inherits",
    "to": "Engine"
  }
]
