crates/code-graph-tools/tests/snapshots/snapshot_responses__response_generate_diagram_class_mermaid.snap
---
source: crates/code-graph-tools/tests/snapshot_responses.rs
expression: normalized
---
graph TD
    n0 -->|inherits| n1
    n0["DebugEngine"]
    n1["Engine"]
