crates/code-graph-tools/tests/snapshots/snapshot_responses__response_generate_diagram_file_edges.snap
---
source: crates/code-graph-tools/tests/snapshot_responses.rs
expression: normalized
---
[
  {
    "direction": "calls",
    "from": "engine.cpp",
    "label": "includes",
    "to": "engine.h"
  },
  {
    "direction": "calls",
    "from": "engine.cpp",
    "label": "includes",
    "to": "utils.h"
  }
]
